fixed hero logo not displaying and overflow when does display, plus ability to nav to project pages, minus random button on here to scrollTo

--- a/src/styles/hero.scss
+++ b/src/styles/hero.scss
@@ -14,8 +14,10 @@
 }
 
 .hero__logo{
-    width: 500px;
     flex: 1;
+    width: 100%;
     object-fit: contain;
     margin-bottom: $margin-m;
+    max-width: 350px;
+    max-height: 350px;
 }
